--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -105,17 +105,23 @@ ARG BAT_SHA256_ARM64=eb8c96a2d9aaaf81cf7d8c3b7918a7336a06a1dec08878887963dc2cdd7
 ARG FZF_SHA256_X64=4be08018ca37b32518c608741933ea335a406de3558242b60619e98f25be2be1
 ARG FZF_SHA256_ARM64=7071f48c2ac0f2bc992d6d33cc36fd675a579a98cc976dda699eea07dd5e9c58
 
+ARG STARSHIP_VERSION=1.24.1
+ARG STARSHIP_SHA256_X64=44a729c34aea5b0451fba49108cdc5ef6b1ae68db65e7623cc244a52efcd23d1
+ARG STARSHIP_SHA256_ARM64=a01ac37aa5993b78ecd6761c5ff4f805032b8ba566357ffbb2227980216f2216
+
 RUN ARCH=$(uname -m) \
     && case $ARCH in \
         x86_64) \
             RUST_ARCH="x86_64-unknown-linux-musl"; JQ_ARCH="linux-amd64"; FZF_ARCH="linux_amd64"; \
             JQ_SHA256=$JQ_SHA256_X64; RG_SHA256=$RG_SHA256_X64; FD_SHA256=$FD_SHA256_X64; \
             BAT_SHA256=$BAT_SHA256_X64; FZF_SHA256=$FZF_SHA256_X64; \
+            STARSHIP_SHA256=$STARSHIP_SHA256_X64; \
             ;; \
         aarch64) \
             RUST_ARCH="aarch64-unknown-linux-gnu"; JQ_ARCH="linux-arm64"; FZF_ARCH="linux_arm64"; \
             JQ_SHA256=$JQ_SHA256_ARM64; RG_SHA256=$RG_SHA256_ARM64; FD_SHA256=$FD_SHA256_ARM64; \
             BAT_SHA256=$BAT_SHA256_ARM64; FZF_SHA256=$FZF_SHA256_ARM64; \
+            STARSHIP_SHA256=$STARSHIP_SHA256_ARM64; \
             ;; \
         *) echo "Unsupported arch: $ARCH"; exit 1; ;; \
     esac \
@@ -142,6 +148,13 @@ RUN ARCH=$(uname -m) \
     && curl -fL -o /tmp/fzf.tar.gz https://github.com/junegunn/fzf/releases/download/v${FZF_VERSION}/fzf-${FZF_VERSION}-${FZF_ARCH}.tar.gz \
     && echo "$FZF_SHA256  /tmp/fzf.tar.gz" | sha256sum -c - \
     && tar -xzf /tmp/fzf.tar.gz -C /usr/local/bin/ \
+    # Starship
+    # Note: Starship musl builds work on both glibc and musl distros (static binary)
+    # We use -unknown-linux-musl for both arches as that is what they provide for static linking
+    && STARSHIP_ARCH=${RUST_ARCH/-gnu/-musl} \
+    && curl -fL -o /tmp/starship.tar.gz https://github.com/starship/starship/releases/download/v${STARSHIP_VERSION}/starship-${STARSHIP_ARCH}.tar.gz \
+    && echo "$STARSHIP_SHA256  /tmp/starship.tar.gz" | sha256sum -c - \
+    && tar -xzf /tmp/starship.tar.gz -C /usr/local/bin/ \
     # Cleanup
     && rm -rf /tmp/*
 
