--- a/tests/e2e/resources/scenarios/formatting-basic.yaml
+++ b/tests/e2e/resources/scenarios/formatting-basic.yaml
@@ -1,7 +1,7 @@
 name: formatting-basic
 description: >
-  Test textDocument/formatting. Includes test case for Issue #393:
-  OpenRewrite formatter regression that removes space after opening brace in closures.
+  Test textDocument/formatting. Documents Issue #393 (OpenRewrite formatter
+  regression that removes space after opening brace in closures).
 workspace:
   fixture: empty-workspace
 steps:
@@ -15,18 +15,15 @@ steps:
           expect:
             type: EQUALS
             value: Ready
-      timeoutMs: 180000
+      timeoutMs: 60000
 
-  # Test 1: Basic formatting - should preserve closure brace spacing
-  # Issue #393: "{ a -> a * 2 }" should not become "{a -> a * 2 }"
+  # Test 1: Formatting returns edits (basic functionality test)
   - openDocument:
       path: src/FormatTest.groovy
       languageId: groovy
       version: 1
       text: |
-        def myList = [1, 2, 3]
-        def doubled = myList.collect { a -> a * 2 }
-        println doubled
+        class FormatTest{def run(){println "test"}}
   - request:
       method: textDocument/formatting
       params:
@@ -37,45 +34,45 @@ steps:
           insertSpaces: true
       saveAs: formatResult
 
-  # Verify formatting returns edits (or empty if already formatted)
-  # The main test is that formatting doesn't break the code
+  # Verify formatting returns edits for poorly formatted code
   - assert:
       source: formatResult
       checks:
         - jsonPath: $
           expect:
-            type: EXISTS
+            type: NOT_EMPTY
+            message: "Expected formatting edits for code that needs reformatting"
 
-  # Test 2: Format with closure - verify space is preserved
+  # Test 2: Document Issue #393 - closure brace spacing regression
+  # KNOWN BUG: formatter changes "{ a -> a * 2 }" to "{a -> a * 2 }"
+  # Expected behavior (when fixed): well-formatted code returns EMPTY edits
+  # Current behavior (broken): returns edits removing the space after "{"
+  # TODO: Change to EMPTY when Issue #393 is fixed
   - openDocument:
-      path: src/ClosureTest.groovy
+      path: src/ClosureSpacing.groovy
       languageId: groovy
       version: 1
       text: |
-        class ClosureTest {
-            def process() {
-                def items = [1, 2, 3]
-                items.each { item ->
-                    println item
-                }
-            }
-        }
+        def doubled = [1, 2, 3].collect { a -> a * 2 }
   - request:
       method: textDocument/formatting
       params:
         textDocument:
-          uri: "{{workspace.uri}}src/ClosureTest.groovy"
+          uri: "{{workspace.uri}}src/ClosureSpacing.groovy"
         options:
           tabSize: 4
           insertSpaces: true
-      saveAs: closureFormatResult
+      saveAs: closureSpacingResult
 
+  # Assert current (buggy) behavior - formatter removes space after {
+  # This documents Issue #393 and will need to be changed to EMPTY when fixed
   - assert:
-      source: closureFormatResult
+      source: closureSpacingResult
       checks:
         - jsonPath: $
           expect:
-            type: EXISTS
+            type: NOT_EMPTY
+            message: "Issue #393 ACTIVE: formatter incorrectly modifies closure brace spacing"
 
   - shutdown: {}
   - exit: {}
