fix: address PR reviews - use stricter assertions
- references-basic: assert 5 references (decl + 2x(new+type))
- rename-basic: assert 3 edits (decl + 2 usages)

--- a/tests/e2e/resources/scenarios/references-basic.yaml
+++ b/tests/e2e/resources/scenarios/references-basic.yaml
@@ -51,8 +51,9 @@ steps:
       checks:
         - jsonPath: $
           expect:
-            type: NOT_EMPTY
-            message: "Should find references to Calculator class"
+            type: SIZE
+            value: 5
+            message: "Should find 5 references to Calculator class (decl + 2 usages with constructor/type duality)"
 
   # Test 2: Find references to a method
   - request:
@@ -73,8 +74,9 @@ steps:
       checks:
         - jsonPath: $
           expect:
-            type: NOT_EMPTY
-            message: "Should find references to add method"
+            type: SIZE
+            value: 3
+            message: "Should find 3 references to add method (def + 2 usages)"
 
   - shutdown: {}
   - exit: {}
