test: fix JSON path assertions to target items array
The LSP response is wrapped in an object { items: [...] }.
Updated assertions to use '$.items' instead of '$' to correctly check the list size and contents.
Verified 'type-definition-basic' passes locally.

--- a/tests/e2e/resources/scenarios/_document-highlight-basic.yaml
+++ b/tests/e2e/resources/scenarios/_document-highlight-basic.yaml
@@ -55,28 +55,28 @@ steps:
   - assert:
       source: highlightResult
       checks:
-        - jsonPath: $
+        - jsonPath: $.items
           expect:
             type: SIZE
             value: 3
             message: "Should find 3 highlights for 'foo'"
         
         # Verify Declaration (Line 2)
-        - jsonPath: $[?(@.range.start.line == 2)]
+        - jsonPath: $.items[?(@.range.start.line == 2)]
           expect:
             type: SIZE
             value: 1
             message: "Should highlight declaration on line 2"
 
         # Verify Usage 1 (Line 3)
-        - jsonPath: $[?(@.range.start.line == 3)]
+        - jsonPath: $.items[?(@.range.start.line == 3)]
           expect:
             type: SIZE
             value: 1
             message: "Should highlight usage on line 3"
 
         # Verify Usage 2 (Line 4)
-        - jsonPath: $[?(@.range.start.line == 4)]
+        - jsonPath: $.items[?(@.range.start.line == 4)]
           expect:
             type: SIZE
             value: 1
