--- a/tests/e2e/resources/scenarios/completion-import-class.yaml
+++ b/tests/e2e/resources/scenarios/completion-import-class.yaml
@@ -61,10 +61,10 @@ steps:
             type: SIZE
             value: 1
         
-        # Verify additionalTextEdits for import
+        # Verify additionalTextEdits has exactly one element
         - jsonPath: "$.items[?(@.label == 'StringUtils')].additionalTextEdits.length()"
           expect:
-            type: SIZE
+            type: EQUALS
             value: 1
         
         - jsonPath: "$.items[?(@.label == 'StringUtils')].additionalTextEdits[0].newText"
